# d3d11-hook-base

./: README.md  hook.cpp
nationwide/: CMakeLists.txt
nationwide/src/: dllmain.cpp
nationwide/src/detours/: present.hpp  release.hpp  resize.hpp  wndproc.hpp
nationwide/src/hook/: hook.cpp  hook.hpp
nationwide/src/offsets/: offsets.hpp
nationwide/src/pattern/: pattern.cpp  pattern.hpp
